updated main.handlebars to make html template

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <title>Weather Dashboard</title>
+        <title>Surf Weasel | Surf Report</title>
         <meta charset="UTF-8"/>
             <!-- media queries -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,23 +14,23 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
             <!-- css -->
-        <link rel="stylesheet" href="/assets/css/reset.css" type="text/css"/>
-        <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
+        <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+            <!-- jQuery -->
         <script src="assets/js/jquery-3.5.1.min.js"></script>
     </head>
     <body>
-		<nav class="navbar">
+		<nav class="navbar navbar-dark bg-dark">
 			<div class="container-fluid justify-content-center">
 				<span id="title" class="navbar m-n1 mb-0 h1">Surf Weasel</span>
 			</div>
 		</nav>
-
-		{{{ body }}}
+		
+		{{{body}}}
 		
             <!-- sticky footer -->
         <footer class="navbar bg-dark fixed-bottom ">
             <div class="container d-flex justify-content-center">
-                <span class="text-muted"> &#169; Mitchell Duncan 2020</span>
+                <span class="text-muted"> &#169; Team 3 2021</span>
                 </div>
         </footer>
   <script src="/assets/js/script.js"></script>
