--- a/views/partials/modal/login.handlebars
+++ b/views/partials/modal/login.handlebars
@@ -1,30 +1,23 @@
-<div class="modal" id="user-info" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Credentials</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
+        <div class="media-body mt-5">
+            <div class="card m-5 mr-5 ml-5">
+                <div class="row m-5">
+                    <div class="col"></div>
 
-      <div class="modal-body">
-        <form>
-          <div class="form-group">
-            <label for="inputAccount">Email</label>
-            <input type="text" class="form-control" id="email">
-          </div>
-          <div class="form-group">
-            <label for="inputAccount">Password</label>
-            <input type="password" class="form-control" id="user_password">
-          </div>
-        </form>
-      </div>
+                    <div class="col-3">
+                        <div class="input-group mb-3">
+                            <input id="emailLogin" type="text" class="form-control" placeholder="Email" aria-label="email" aria-describedby="basic-addon1">
+                          </div>
+                          <div class="input-group mb-3">
+                            <input id="passwordLogin" type="text" class="form-control" placeholder="Password" aria-label="password" aria-describedby="basic-addon1">
+                          </div>
+                          <div id="login-button">
+                            <button type="submit" class="btn btn-primary">Login</button>
+                          </div>
+                  
+                    </div>
 
-      <div class="modal-footer">
-        <button id="login" type="button" class="btn btn-primary">Login</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
+                    <div class="col"></div>
+                </div>
+                
+            </div>
+        </div>
