--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,50 +1,42 @@
-{{> nav/nav-block user=false register=true}}
+<div class="media-body mt-5">
+  <div class="card m-5 mr-5 ml-5">
+    <div class="row m-5">
+      <div class="col"></div>
 
-<div class="container">
-  <div class="row">
-    <div class="col col-md-12">
-      <header class="create-user-wrap header-wrap" align="center">
-        <h1>Create Your Account</h1>
-        <h3 id="create-err-msg"></h3>
-      </header>
-
-      <h3 id="err-msg"></h3>
-
-      <form id= "create-form">
-        <div class="form-row">
-          <div class="form-group col-md-12">
-            <label for="inputFirst">First Name</label>
-            <input type="text" class="form-control" id="inputFirst" placeholder="John">
-          </div>
+      <div class="col-5">
+        <p>Please enter the email address you would like to use:</p>
+        <div class="input-group mb-3">
+          <input id="emailLogin" type="text" class="form-control" placeholder="Email" aria-label="Email"
+            aria-describedby="basic-addon1">
         </div>
-
-        <div class="form-row">
-          <div class="form-group col-md-12">
-            <label for="inputLast">Last Name</label>
-            <input type="text" class="form-control" id="inputLast" placeholder="Doe">
-          </div>
+        <p>What is your first name?</p>
+        <div class="input-group mb-3">
+          <input id="passwordLogin" type="text" class="form-control" placeholder="First Name" aria-label="First Name"
+            aria-describedby="basic-addon1">
         </div>
+        <p>What is your last name?</p>
 
-        <div class="form-row">
-          <div class="form-group col-md-12">
-            <label for="inputEmail">Email</label>
-            <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-          </div>
+        <div class="input-group mb-3">
+          <input id="passwordLogin" type="text" class="form-control" placeholder="Last Name" aria-label="Last Name"
+            aria-describedby="basic-addon1">
         </div>
-
-        <div class="form-row">
-          <div class="form-group col-md-12">
-            <label for="inputPassword">Password</label>
-            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-          </div>
+        <p>Please enter a password for your account:</p>
+        <div class="input-group mb-3">
+          <input id="passwordLogin" type="text" class="form-control" placeholder="Password" aria-label="Password"
+            aria-describedby="basic-addon1">
         </div>
-
-        <div>
-          <h2 id="message"></h2>
+        <p>Please re enter your password:</p>
+        <div class="input-group mb-3">
+          <input id="passwordLogin" type="text" class="form-control" placeholder="Password" aria-label="Password"
+            aria-describedby="basic-addon1">
         </div>
+        <div id="signup-button">
+          <button type="submit" class="btn btn-primary">Signup!</button>
+        </div>
+      </div>
 
-        <button type="submit" id="add-user" class="btn btn-primary">Submit</button>
-      </form>
+      <div class="col"></div>
     </div>
+
   </div>
 </div>
