updated signup ids in handlebars and template

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,28 +6,28 @@
       <div class="col-5">
         <p>Please enter the email address you would like to use:</p>
         <div class="input-group mb-3">
-          <input id="emailLogin" type="text" class="form-control" placeholder="Email" aria-label="Email"
+          <input id="emailSignup" type="text" class="form-control" placeholder="Email" aria-label="Email"
             aria-describedby="basic-addon1">
         </div>
         <p>What is your first name?</p>
         <div class="input-group mb-3">
-          <input id="passwordLogin" type="text" class="form-control" placeholder="First Name" aria-label="First Name"
+          <input id="firstNameSignup" type="text" class="form-control" placeholder="First Name" aria-label="First Name"
             aria-describedby="basic-addon1">
         </div>
         <p>What is your last name?</p>
 
         <div class="input-group mb-3">
-          <input id="passwordLogin" type="text" class="form-control" placeholder="Last Name" aria-label="Last Name"
+          <input id="lastNameSignup" type="text" class="form-control" placeholder="Last Name" aria-label="Last Name"
             aria-describedby="basic-addon1">
         </div>
         <p>Please enter a password for your account:</p>
         <div class="input-group mb-3">
-          <input id="passwordLogin" type="text" class="form-control" placeholder="Password" aria-label="Password"
+          <input id="passwordOne" type="text" class="form-control" placeholder="Password" aria-label="Password"
             aria-describedby="basic-addon1">
         </div>
         <p>Please re enter your password:</p>
         <div class="input-group mb-3">
-          <input id="passwordLogin" type="text" class="form-control" placeholder="Password" aria-label="Password"
+          <input id="passwordTwo" type="text" class="form-control" placeholder="Password" aria-label="Password"
             aria-describedby="basic-addon1">
         </div>
         <div id="signup-button">
