--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,12 +11,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Days+One&display=swap" rel="stylesheet">
             <!-- bootstrap -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-            <!-- css -->
+        </script>
+        <script async 
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXn93WsnSypxsm5kEisCHg_K8ZyNeVf4U&libraries=places&callback=initMap" type="text/javascript"></script>
+        <script defer src="/assets/js/script.js"></script>
         <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-            <!-- jQuery -->
-        <script src="assets/js/jquery-3.5.1.min.js"></script>
     </head>
     <body>
 		<nav class="navbar navbar-dark bg-dark">
@@ -33,6 +34,5 @@
                 <span class="text-muted"> &#169; Team 3 2021</span>
                 </div>
         </footer>
-  <script src="/assets/js/script.js"></script>
     </body>
 </html>
