setup register/signup functionality with database

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -17,7 +17,7 @@
         <p>What is your last name?</p>
 
         <div class="input-group mb-3">
-          <input id="lastNameSignup" type="text" class="form-control" placeholder="Last Name" aria-label="Last Name"
+          <input id="inputLast" type="text" class="form-control" placeholder="Last Name" aria-label="Last Name"
             aria-describedby="basic-addon1">
         </div>
         <p>Please enter a password for your account:</p>
