--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -30,6 +30,7 @@
           <input id="inputPass2" type="text" class="form-control" placeholder="Password" aria-label="Password"
             aria-describedby="basic-addon1">
         </div>
+        <div id="CheckPasswordMatch" class="mb-3"></div>
         <div id="signupBtn">
           <button type="submit" class="btn btn-primary">Signup!</button>
         </div>
