--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,39 +1,70 @@
 <!DOCTYPE html>
-
 <html lang="en">
+
     <head>
         <title>Surf Weasel | Surf Report</title>
-        <meta charset="UTF-8"/>
-            <!-- media queries -->
+        <meta charset="UTF-8" />
+        <!-- media queries -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
-            <!-- google fonts -->
+        <!-- google fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Days+One&display=swap" rel="stylesheet">
-            <!-- bootstrap -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-        </script>
-        {{!-- google maps api script tag is async and the script.js script tag depends on it loading first to run so it is deferred  --}}
-        <script async 
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXn93WsnSypxsm5kEisCHg_K8ZyNeVf4U&libraries=places&callback=initMap" type="text/javascript"></script>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Days+One&display=swap"
+            rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Indie+Flower&display=swap" rel="stylesheet">
+
+        <!-- bootstrap -->
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+            integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+            crossorigin="anonymous">
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+            crossorigin="anonymous"></script>
+        </script> {{!-- google maps api script tag is async and the script.js
+        script tag depends on it loading first to run so it is deferred --}}
+        <script async
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXn93WsnSypxsm5kEisCHg_K8ZyNeVf4U&libraries=places&callback=initMap"
+            type="text/javascript"></script>
         <script defer src="/assets/js/script.js"></script>
-        <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+        <link rel="stylesheet" href="/public/assets/css/style.css"
+            type="text/css">
     </head>
+
     <body>
-		<nav class="navbar navbar-dark bg-dark">
-			<div class="container-fluid justify-content-center">
-				<span id="title" class="navbar m-n1 mb-0 h1">Surf Weasel</span>
-			</div>
-		</nav>
-		
-		{{{body}}}
-		
-            <!-- sticky footer -->
+        <header>
+            <nav class="navbar navbar-dark bg-dark">
+                <div class="container-fluid justify-content-center">
+                    <span id="title" class="navbar m-n1 mb-0 h1 navbar-brand">
+                        <h1>Surf Weasel</h1>
+                    </span>
+                    <button type="button"
+                        class="btn btn-header-1 active">Home</button>
+                    <button type="button" class="btn btn-header-2">Surf
+                        Report</button>
+                    <button type="button"
+                        class="btn btn-header">Contact</button>
+                    <button type="button"
+                        class="btn btn-header-3">About</button>
+                    <button type="button"
+                        class="btn btn-header-4">Register</button>
+                    <button type="button"
+                        class="btn btn-header-4">Login</button>
+                </div>
+            </nav>
+        </header> {{{body}}}
+        <!-- sticky footer -->
         <footer class="navbar bg-dark fixed-bottom ">
             <div class="container d-flex justify-content-center">
-                <span class="text-muted"> &#169; Team 3 2021</span>
-                </div>
+                <span class="text-muted"> &#169; Team 3 Surf Weasel<italic>
+                        "weaseling since 2021"</italic></span>
+            </div>
         </footer>
+        <script
+            src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     </body>
+
 </html>
