got login html route working

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
-{{> nav/nav-block user=true register=false}}
+{{!-- {{> nav/nav-block user=true register=false}} --}}
 
-<div class="media">
+<div class="media mt-5">
   <div class="media-body">
     <div class="row">
       <div class="col"></div>
