--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,12 +8,12 @@
         <form>
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            <input type="password" class="form-control" id="user_password" placeholder="Password">
           </div>
           <button id="login" type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -22,3 +22,5 @@
     </div>
   </div>
 </div>
+{{!-- app.js manages user login and register data --}}
+<script src="/assets/js/app.js"></script>
