fixed script errors when loading dashboard(in dashboard.handlebars)

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,6 +18,9 @@
           <button id="login" type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
+      <h3 id="#login-err-msg">
+
+      </h3>
       <div class="col"></div>
     </div>
   </div>
