--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,9 +18,13 @@
           <button id="login" type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
-      <h3 id="#login-err-msg">
-
-      </h3>
+      <div class="col"></div>
+    </div>
+    <div class="row mt-4">
+      <div class="col"></div>
+      <div class="col-6">
+        <div id="login-err-msg" class="mb-3"></div>
+      </div>
       <div class="col"></div>
     </div>
   </div>
