Weather for city in script.js

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -12,12 +12,50 @@
         
       {{else}}
         <p>You need to log in to use this app.</p>
-        <input type="text" id="searchText">
+        {{!-- <input type="text" id="searchText"> --}}
         {{!-- <button class="btn button" id="search">Search</button> --}}
+        {{!-- <div>
+          <ul id="searchResults"></ul>
+        </div> --}}
+        
+        <div class="container-fluid">
+        <div class="row content search">
+          <div class="col-sm-3">
+            <h4>Search for a City:</h4>
+            <input type="text" id="searchText">
+            {{!-- <input id="city-search" type="text" placeholder="Search.." name="search"> --}}
+            {{!-- <button id="search"><i class="fas fa-search"></i></button> --}}
+
+               {{!-- <button class="btn button" id="search">Search</button> --}}
         <div>
           <ul id="searchResults"></ul>
         </div>
-        <div id="map"></div>
+        <div class="c
+            <div id="city-storage"></div>
+          </div>
+         
+          <br>
+          
+            <div class="col-sm-9">
+
+                <div id="main" class="well">
+                    
+                </div>
+
+                <div class="row">
+                    <h2>Current Conditions:</h2>
+                    <div class ="row" id="current-condtions">
+                        
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+        <div id="map" style="visibility:hidden;"></div>
       {{/if}}
       <h5 id="login-err-msg"></h5>
     </div>
