--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,7 +1,9 @@
 <div class="media-body mt-5">
   <div class="card m-5 mr-5 ml-5">
     <div class="row m-5">
-      <div class="col"></div>
+      <div class="col">
+        <img src="assets/images/theweasel.png" class="weasy">
+      </div>
 
       <div class="col-5">
         <p>Please enter the email address you would like to use:</p>
