--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,8 @@
 body {
   color: rgb(0, 0, 0);
   background-size: cover;
-  height:100%
+  height:100%;
+  background-image: url("../images/surfer.png");
 }
 
 .jumbotron {
@@ -35,16 +36,6 @@ body {
  height: 65px;
 }
 
-/* .container {
-  padding-bottom: 2%;
-  margin-top: 10%;
-  background: rgba(86, 101, 115,.6);
-  height:10%;
-  border-radius: .25rem;
-  margin-bottom: 2%;
-  width: 600px; */
-/* } */
-
 [data-useremail="true"] {
   color: white !important;
 }
@@ -76,4 +67,61 @@ hr {
 #map {
   height: 500px;
   width: 500px;
+}
+
+.form-control {
+  border-radius: 18px 18px 18px 18px;
+}
+
+.weasy {
+  padding-left: 20px;
+  padding-right: 20px;
+  height: auto;
+  width: 100%;
+}
+
+nav {
+  height: 80px;
+  border-bottom: 6px solid yellow;
+  overflow: visible;
+}
+
+h2 {
+  font-family: "Archivo Black", sans-serif;
+}
+
+.navbar-brand {
+  padding: 10px 200px 40px 20px;
+  justify-content: center;
+  font-family: "Bangers", cursive;
+  color: rgb(106, 134, 158) !important;
+  font-size: 50px;
+  width: 33%;
+}
+.nav {
+  /* padding: 10px 200px 40px 20px; */
+  /* justify-content: center;
+  font-family: "Bangers", cursive;
+  color: rgb(106, 134, 158) !important;
+  font-size: 50px; */
+  /* width: 33%; */
+}
+
+.btn {
+  color: rgb(230, 120, 120);
+  padding-top: 20px;
+  border: none;
+}
+
+.btn:hover {
+  color: white;
+}
+
+.btn-primary {
+  border-radius: 18px 18px 18px 18px;
+  background-color: rgb(40, 40, 43);
+  padding: 4px;
+  justify-content: center;
+  width: 200px;
+  height: auto;
 }
