--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
             <!-- google fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Days+One&display=swap" rel="stylesheet">
+                <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Indie+Flower&display=swap" rel="stylesheet">
             <!-- bootstrap -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -19,7 +19,7 @@
     <body>
 		<nav class="navbar navbar-dark bg-dark">
 			<div class="container-fluid justify-content-center">
-				<span id="title" class="navbar m-n1 mb-0 h1">Surf Weasel</span>
+				<span id="title" class="navbar-brand navbar m-n1 mb-0 h1">Surf Weasel</span>
 			</div>
 		</nav>
 		
@@ -28,8 +28,8 @@
             <!-- sticky footer -->
         <footer class="navbar bg-dark fixed-bottom ">
             <div class="container d-flex justify-content-center">
-                <span class="text-muted"> &#169; Team 3 2021</span>
-                </div>
+                <span class="text-muted"> &#169; Team 3 Surf Weasel <italic>"weaseling waves since 2021"</italic></span>
+            </div>
         </footer>
     </body>
 </html>
