--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,4 @@
 {{!-- {{> nav/nav-block user=true register=false}} --}}
-
 <div class="media mt-5">
   <div class="media-body">
     <div class="row">
@@ -7,6 +6,7 @@
       <div class="col-6">
         <form>
           <div class="form-group">
+            <h2>Login to get into the shred zone!</h2>
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
