started applying more stanley's handlebars and fixing Sarahs html issue

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -49,32 +49,24 @@
           <ul id="searchResults"></ul>
         </div>
 
-        <div class="c
+         <div class="container"
             <div id="city-storage"></div>
-          </div>
+        </div>
          
-          <br>
-          
+          <br>   
             <div class="col-sm-9">
                     <div class="row">
                     <h2>Current Conditions:</h2>
                     <div class ="row" id="current-condtions">
                         
                     </div>
-
                 </div>
                 <div id="main" class="well">
-                  
-                    
+                     
                 </div>
-
-                
-
             </div>
-
         </div>
-
-    </div>
+    </div>>
         <div id="map" style="visibility:hidden;"></div>
 
       {{/if}}
