delete config folder

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -33,9 +33,9 @@
           <ul id="searchResults"></ul>
         </div>
 
-        <div class="c
+        <div class="container"
             <div id="city-storage"></div>
-          </div>
+        </div>
          
           <br>
           
