--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13,12 +13,6 @@ body {
   color: black;
 }
 
-.btn {
-  color:white;
-  background:#cadde1;
-  border: 1px solid white;
-}
-
 #user-form, .header-wrap, #create-form, .create-user-wrap {
   padding: 20px;
   border-radius: 15px;
@@ -87,7 +81,12 @@ nav {
 }
 
 h2 {
-  font-family: "Archivo Black", sans-serif;
+  font-family: "Bangers", cursive;
+}
+
+#login, p, a {
+  font-family: "Bangers", cursive;
+  font-size: large;
 }
 
 .navbar-brand {
@@ -109,7 +108,7 @@ h2 {
 
 .btn {
   color: rgb(230, 120, 120);
-  padding-top: 20px;
+  
   border: none;
 }
 
@@ -124,4 +123,8 @@ h2 {
   justify-content: center;
   width: 200px;
   height: auto;
+}
+
+.card {
+  background-color: rgba(240, 255, 255, 0.815);
 }
