--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -98,12 +98,13 @@ h2 {
   width: 33%;
 }
 .nav {
-  /* padding: 10px 200px 40px 20px; */
-  /* justify-content: center;
-  font-family: "Bangers", cursive;
-  color: rgb(106, 134, 158) !important;
-  font-size: 50px; */
-  /* width: 33%; */
+  background-color: rgba(240, 255, 255, 0.815);
+  box-shadow:
+  -1px -1px 0 rgba(255, 255, 255, 0),
+  1px 1px 0 rgba(0,0,0,.25),
+  3px 3px 3px rgba(0,0,0,.25),
+  10px 10px 20px rgba(0,0,0,.5),
+  20px 40px 40px rgba(0,0,0,.5); 
 }
 
 .btn {
@@ -121,8 +122,8 @@ h2 {
   background-color: rgb(40, 40, 43);
   padding: 4px;
   justify-content: center;
-  width: 200px;
-  height: auto;
+  width: 80px;
+  height: 50px;
 }
 
 .card {
