--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -98,7 +98,22 @@ h2 {
   width: 33%;
 }
 .nav {
-  background-color: rgba(240, 255, 255, 0.815);
+  background-color: rgba(61, 61, 61, 0.815);
+  box-shadow:
+  -1px -1px 0 rgba(255, 255, 255, 0),
+  1px 1px 0 rgba(0,0,0,.25),
+  3px 3px 3px rgba(0,0,0,.25),
+  10px 10px 20px rgba(0,0,0,.5),
+  20px 40px 40px rgba(0,0,0,.5); 
+}
+
+.navtext {
+  color: azure;
+  font-family: fantasy;
+}
+
+.side-bar {
+  background-color: rgba(240, 255, 255, 0.856);
   box-shadow:
   -1px -1px 0 rgba(255, 255, 255, 0),
   1px 1px 0 rgba(0,0,0,.25),
