--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,26 +9,25 @@
         <button type="button" class="btn btn-primary mt-1"><a href="/dashboard">Home</a></button>
       </div> --}}
       <div class="col">
-        <div class="row ml-4">
-          <p class="ml-5 mt-3 mr-2 navtext">Search for your Beach:</p>
+        <div class="row ml-1">
+          <p class="ml-1 mt-3 mr-2 navtext">Search for your Beach:</p>
           <form class="form-inline pl-3 pr-2">
-              <input id="searchText" class="form-control w-50 mt-2 mr-2" type="text" placeholder="Search" aria-label="Search">
+              <input id="searchText" class="form-control w-50 mr-2" type="text" placeholder="Search" aria-label="Search">
               <button id="search" class="btn btn-primary" type="submit">Search</button>
               {{!-- need to fix search button errors (only loads data of previously typed cities) --}}
           </form>
         </div>
 
       </div>
-      <div class="col">
-        <div class="row">
+      <div class="col ml-5">
+        <div class="row ml-5">
         {{#if isloggedin}}
           <p class="ml-5 mt-3 mr-2 navtext">You are logged in as {{user.name}}</p>
           <a href="/logout"> <button type="btn" class="btn btn-primary mt-1">Logout</button></a>
         {{else}}
-          <p class="ml-5 mt-3 navtext">You need to log in to use this app.</p> 
-          <button type="button" class="btn btn-primary ml-2 mt-1"><a href="/login">Login</a></button> 
+          <p class="ml-5 mt-3 navtext">You need to login to use this app.</p> 
+          <button type="button" class="btn btn-primary ml-2 dashLogin"><a href="/login">Login</a></button> 
         </div>
-  
       </div>
     </div>  
   </div>
@@ -46,41 +45,28 @@
         </aside>
         {{!-- dashboard --}}
         <article id="displayInfo" class="col media-body">
-          <div id="main-container" class="card">
+          <div id="main-container" class="dash">
             <div class="jumbotron text-center header-wrap" align="center">
-              <p class="lead">Welcome to <strong>Sample App</strong></p>
-              <hr class="my-4">
-              <div>
-                  <div class="container-fluid">
-                  <div class="row content search">
-                    <div class="col-sm-3">
-                      <h4>Search for a City:</h4>
-                      <input type="text" id="">
-                      {{!-- <input id="city-search" type="text" placeholder="Search.." name="search"> --}}
-                      {{!-- <button id="search"><i class="fas fa-search"></i></button> --}}
+              
+            <div>
+              {{!-- {{#if isloggedin}}
+                <p class="lead">Welcome {{user.name}}</p>
+              {{else}} --}}
+                <p class="lead">Welcome To Surfweasel</p>
+            </div>
 
-                        {{!-- <button class="btn button" id="search">Search</button> --}}
-                  <div>
-                    <ul id="searchResults"></ul>
-                  </div>
+            <ul id="searchResults"></ul>
 
+            <div id="city-storage"></div>
 
-                  <div class="container"
+            <h2>Current Conditions:</h2>
 
-                      <div id="city-storage"></div>
-                  </div>
-                  
-                    <br>   
-                      <div class="col-sm-9">
-                              <div class="row">
-                              <h2>Current Conditions:</h2>
-                              <div class ="row" id="current-condtions">
-                                  
-                              </div>
-                          <div id="main" class="well"></div>
-                      </div>
-                  <div id="map" style="visibility:hidden;"></div>
+            <div class ="row" id="current-condtions"></div>
 
+            <div id="main" class="well"></div>
+
+            <div id="map" style="visibility:hidden;"></div>
+            
                 {{/if}}
                 <h5 id="login-err-msg"></h5>
               </div>
