--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -23,7 +23,7 @@
         <div class="row ml-5">
         {{#if isloggedin}}
           <p class="ml-5 mt-3 mr-2 navtext">You are logged in as {{user.name}}</p>
-          <a href="/logout"> <button type="btn" class="btn btn-primary mt-1">Logout</button></a>
+          <a href="/logout"> <button type="btn" class="btn btn-primary ml-1 dashLogin">Logout</button></a>
         {{else}}
           <p class="ml-5 mt-3 navtext">You need to login to use this app.</p> 
           <button type="button" class="btn btn-primary ml-2 dashLogin"><a href="/login">Login</a></button> 
@@ -37,11 +37,20 @@
     <div class="row min-vh-100">
       {{!-- sidebar --}}
         <aside class="col-sm-2 side-bar">
-            <button id="clear" class="btn btn-sm btn-links ml-3 mt-sm-2 my-2 my-sm-0">Clear History</button>
-            <h5 class="mt-1 mb-3">Beach Search History:</h3>  
-            <div id="cityHistory">
 
+            <h5 class="mt-1 mb-3">Favorite Beach:</h3>
+
+            <div id="favBeach">
+              {{!-- append favorite beach of user here (after login) --}}
             </div>
+            <h5 class="mt-1">Previous Beaches:</h3>
+
+            <button id="clear" class="btn btn-sm btn-links">Clear Search History</button>  
+
+            <div id="beachHistory">
+              {{!-- append beach search istory here --}}
+            </div>
+            
         </aside>
         {{!-- dashboard --}}
         <article id="displayInfo" class="col media-body">
@@ -66,7 +75,7 @@
             <div id="main" class="well"></div>
 
             <div id="map" style="visibility:hidden;"></div>
-            
+
                 {{/if}}
                 <h5 id="login-err-msg"></h5>
               </div>
