made slight modifications to dashboard and main navbar, added new api key for stormglass

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,8 +18,8 @@
     </head>
     <body>
 		<nav class="navbar navbar-dark bg-dark">
-			<div class="container-fluid justify-content-center">
-				<span id="title" class="navbar-brand navbar m-n1 mb-0 h1">Surf Weasel</span>
+			<div class="container-fluid justify-content-center ml-5">
+				<span id="title" class="navbar-brand navbar ml-5">Surf Weasel</span>
 			</div>
 		</nav>
 		
