--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -78,8 +78,8 @@ hr {
 
 nav {
   height: 80px;
-  border-bottom: 6px solid yellow;
-  overflow: visible;
+  border-bottom: 2px solid yellow;
+  /* overflow: visible; */
 }
 
 h2 {
@@ -115,13 +115,13 @@ h2 {
 }
 
 .side-bar {
-  background-color: rgba(240, 255, 255, 0.856);
-  /* box-shadow:
+  background-color: rgba(240, 255, 255, 0.932);
+  box-shadow:
   -1px -1px 0 rgba(255, 255, 255, 0),
   1px 1px 0 rgba(0,0,0,.25),
   3px 3px 3px rgba(0,0,0,.25),
   10px 10px 20px rgba(0,0,0,.5),
-  20px 40px 40px rgba(0,0,0,.5);  */
+  20px 40px 40px rgba(0,0,0,.5); 
 }
 
 .btn {
@@ -144,7 +144,7 @@ h2 {
 }
 
 .dashLogin {
-  margin-top: 14px;
+  margin-top: 4px;
 }
 
 .card {
@@ -167,4 +167,8 @@ h2 {
   3px 3px 3px rgba(0,0,0,.25),
   10px 10px 20px rgba(0,0,0,.5),
   20px 40px 40px rgba(0,0,0,.5);  */
+}
+
+footer {
+  border-top:yellow 1px solid;
 }
