--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -10,7 +10,7 @@
       </div> --}}
       <div class="col">
         <div class="row ml-1">
-          <p class="ml-1 mt-3 mr-2 navtext">Search for your Beach:</p>
+          <h5 class="ml-1 mt-2 mr-2 navtext">Search for your Beach:</h5>
           <form class="form-inline pl-3 pr-2">
               <input id="searchText" class="form-control w-50 mr-2" type="text" placeholder="Search" aria-label="Search">
               <button id="search" class="btn btn-primary" type="submit">Search</button>
@@ -22,10 +22,10 @@
       <div class="col ml-5">
         <div class="row ml-5">
         {{#if isloggedin}}
-          <p class="ml-5 mt-3 mr-2 navtext">You are logged in as {{user.name}}</p>
+          <h5 class="ml-5 mt-2 mr-2 navtext">You are logged in as {{user.name}}</h5>
           <a href="/logout"> <button type="btn" class="btn btn-primary ml-1 dashLogin">Logout</button></a>
         {{else}}
-          <p class="ml-5 mt-3 navtext">You need to login to use this app.</p> 
+          <h5 class="ml-5 mt-2 navtext">You need to login to access full features.</h5> 
           <button type="button" class="btn btn-primary ml-2 dashLogin"><a href="/login">Login</a></button> 
         </div>
       </div>
@@ -38,13 +38,12 @@
       {{!-- sidebar --}}
         <aside class="col-sm-2 side-bar">
 
-            <h5 class="mt-1 mb-3">Favorite Beach:</h3>
+            <h5 class="mt-4 mb-3">Favorite Beach:</h5>
 
             <div id="favBeach">
               {{!-- append favorite beach of user here (after login) --}}
             </div>
-            <h5 class="mt-1">Previous Beaches:</h3>
-
+            <h5 class="mt-1">Previous Searches:</h5>
             <button id="clear" class="btn btn-sm btn-links">Clear Search History</button>  
 
             <div id="beachHistory">
@@ -53,7 +52,7 @@
             
         </aside>
         {{!-- dashboard --}}
-        <article id="displayInfo" class="col media-body">
+        <article id="displayInfo" class="col">
           <div id="main-container" class="dash">
             <div class="jumbotron text-center header-wrap" align="center">
               
@@ -61,14 +60,14 @@
               {{!-- {{#if isloggedin}}
                 <p class="lead">Welcome {{user.name}}</p>
               {{else}} --}}
-                <p class="lead">Welcome To Surfweasel</p>
+                <h3 class="lead">Welcome To Surfweasel</h3>
             </div>
 
             <ul id="searchResults"></ul>
 
             <div id="city-storage"></div>
 
-            <h2>Current Conditions:</h2>
+            {{!-- <h2>Current Conditions:</h2>   --}}
 
             <div class ="row" id="current-condtions"></div>
 
