--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -98,6 +98,12 @@ h2 {
   color: rgb(106, 134, 158) !important;
   font-size: 50px;
   width: 33%;
+  text-shadow:
+  -1px -1px 0 rgba(255, 255, 255, 0),
+  1px 1px 0 rgba(0,0,0,.25),
+  3px 3px 3px rgba(0,0,0,.25),
+  10px 10px 20px rgba(0,0,0,.5),
+  20px 40px 40px rgba(0,0,0,.5);
 }
 .nav {
   background-color: rgba(61, 61, 61, 0.815);
