--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -12,7 +12,7 @@
         <div class="row ml-1">
           <h5 class="ml-1 mt-2 mr-2 navtext">Search for your Beach:</h5>
           <form class="form-inline pl-3 pr-2">
-              <input id="searchText" class="form-control w-50 mr-2" type="text" placeholder="Search" aria-label="Search">
+              <input id="searchText" name="fav_beach" class="form-control w-50 mr-2" type="text" placeholder="Search" aria-label="Search">
               <button id="search" class="btn btn-primary" type="submit">Search</button>
               {{!-- need to fix search button errors (only loads data of previously typed cities) --}}
           </form>
@@ -27,6 +27,7 @@
         {{else}}
           <h5 class="ml-5 mt-2 navtext">You need to login to access full features.</h5> 
           <button type="button" class="btn btn-primary ml-2 dashLogin"><a href="/login">Login</a></button> 
+          {{/if}}
         </div>
       </div>
     </div>  
@@ -39,7 +40,7 @@
         <aside class="col-sm-2 side-bar">
 
             <h5 class="mt-4 mb-3">Favorite Beach:</h5>
-
+            
             <div id="favBeach">
               {{!-- append favorite beach of user here (after login) --}}
             </div>
@@ -57,12 +58,14 @@
             <div class="jumbotron text-center header-wrap" align="center">
               
             <div>
-              {{!-- {{#if isloggedin}}
+              {{#if isloggedin}}
                 <p class="lead">Welcome {{user.name}}</p>
-              {{else}} --}}
+              {{else}}
                 <h3 class="lead">Welcome To Surfweasel</h3>
+         
+              {{/if}}
             </div>
-
+            
             <ul id="searchResults"></ul>
 
             <div id="city-storage"></div>
@@ -75,7 +78,6 @@
 
             <div id="map" style="visibility:hidden;"></div>
 
-                {{/if}}
                 <h5 id="login-err-msg"></h5>
               </div>
             </div>
@@ -83,5 +85,3 @@
         </article>
     </div>
 </div>
-
-{{> modal/login-block}}
