--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -173,12 +173,16 @@ h2 {
 .dash {
   background-color: rgba(240, 255, 255, 0.877);
   border-radius: 5px;
-  /* box-shadow:
+  box-shadow:
   -1px -1px 0 rgba(255, 255, 255, 0),
   1px 1px 0 rgba(0,0,0,.25),
   3px 3px 3px rgba(0,0,0,.25),
   10px 10px 20px rgba(0,0,0,.5),
-  20px 40px 40px rgba(0,0,0,.5);  */
+  20px 40px 40px rgba(0,0,0,.5); 
+}
+
+label {
+  color: azure;
 }
 
 footer {
