--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,10 +8,10 @@
       {{!-- <div class="col">
         <button type="button" class="btn btn-primary mt-1"><a href="/dashboard">Home</a></button>
       </div> --}}
-      <div class="col">
+      <div class="col-7">
         <div class="row ml-1">
           <h5 class="ml-1 mt-2 mr-2 navtext">Search for your Beach:</h5>
-          <form class="form-inline pl-3 pr-2">
+          <form class="form-inline pl-3 pr-2 mt-1">
               <input id="searchText" name="fav_beach" class="form-control w-50 mr-2" type="text" placeholder="Search" aria-label="Search">
               <button id="search" class="btn btn-primary" type="submit">Search</button>
               <div class="form-check form-check-inline">
@@ -23,7 +23,7 @@
 
       </div>
       <div class="col ml-5">
-        <div class="row ml-5">
+        <div class="row ml-5 logoutRow">
         {{#if isloggedin}}
           <h5 class="ml-5 mt-2 mr-2 navtext">You are logged in as {{user.name}}</h5>
           <a href="/logout"> <button type="btn" class="btn btn-primary ml-1 dashLogin">Logout</button></a>
