deleted unused handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,6 +28,7 @@
 		{{{body}}}
 		
             <!-- sticky footer -->
+        <script src="assets/js/popmotion.js"></script>
         <footer class="navbar bg-dark fixed-bottom ">
             <div class="container d-flex justify-content-center">
                 <span class="text-muted"> &#169; Team 3 Surf Weasel <italic>"weaseling waves since 2021"</italic></span>
