added some basic popmotion animations

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -52,7 +52,7 @@
       <article id="displayInfo" class="col">
         <div id="main-container" class="dash">
           <div class="jumbotron text-center header-wrap" align="center">            
-            <div>
+            <div class="userWelcome">
               {{#if isloggedin}}
                 <p class="lead">Welcome {{user.name}}</p>
               {{else}}
