--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,7 +6,7 @@
       <div class="col-6">
         <div class="card p-5">
           <form>
-            <div class="form-group">
+            <div class="loginForm form-group">
               <h2>Login to get into the shred zone!</h2>
               <label for="exampleInputEmail1">Email address</label>
               <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
