--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
 <div class="media-body mt-5">
-  <div class="card m-5 mr-5 ml-5">
+  <div class="card signupCard m-5 mr-5 ml-5">
     <div class="row m-5">
       <div class="col">
         <img src="assets/images/theweasel.png" class="weasy">
