added more basic popmotion animations

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -49,7 +49,7 @@
         </div>          
       </aside>
       {{!-- dashboard --}}
-      <article id="displayInfo" class="col">
+      <article id="displayInfo" class="col animate">
         <div id="main-container" class="dash">
           <div class="jumbotron text-center header-wrap" align="center">            
             <div class="userWelcome">
