--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,9 +4,9 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-6">
-        <div class="card p-5">
-          <form>
-            <div class="loginForm form-group">
+        <div class="card animate p-5">
+          <form class="animateForm">
+            <div class="form-group">
               <h2>Login to get into the shred zone!</h2>
               <label for="exampleInputEmail1">Email address</label>
               <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
